apps/ftch-social/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftch-social
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ftch-social
      app.kubernetes.io/instance: ftch-social
  template:
    spec:
      containers:
        - name: ftch-social
          resources:
            limits:
              cpu: 2000m
              memory: 3G
              ephemeral-storage: 3G
            requests:
              cpu: 100m
              memory: 3G
              ephemeral-storage: 1G
